SmartHire AI final submission version